[gd_scene load_steps=3 format=3 uid="uid://b2686q2yqno12"]

[ext_resource type="Script" path="res://end_screen.gd" id="1_ha82k"]
[ext_resource type="Theme" uid="uid://b7ridqq1ro7a8" path="res://metal_theme.tres" id="2_xnpfq"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_ha82k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_xnpfq")

[node name="Background" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Background/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Background/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Control/Background/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "{score placeholder}"
horizontal_alignment = 1

[node name="NewGameBtn" type="Button" parent="Control/Background/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "TRY AGAIN"
